tdf#138144 Form wizard fails to save

fallout from
    commit 3de38e95561ab7ca114d9f3307702ba89c4e3e9a
    Date:   Tue Nov 10 19:20:06 2020 +0200
    use fastparser in forms

Change-Id: I4691786525132ef0cf98b6b177a2c022c4d7d032
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105932
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>