xmloff/source/forms/elementimport.cxx
@@ -1763,11 +1763,8 @@ namespace xmloff
         OSL_ENSURE(!m_xOwnAttributes.is(), "OColumnWrapperImport::StartElement: already have the cloned list!");
 
         // clone the attributes
-        Reference< XCloneable > xCloneList(_rxAttrList, UNO_QUERY);
-        OSL_ENSURE(xCloneList.is(), "OColumnWrapperImport::StartElement: AttributeList not clonable!");
-        if ( xCloneList.is() )
-            m_xOwnAttributes.set(xCloneList->createClone(), UNO_QUERY);
-        OSL_ENSURE(m_xOwnAttributes.is(), "OColumnWrapperImport::StartElement: no cloned list!");
+        Reference< XCloneable > xCloneList(_rxAttrList, UNO_QUERY_THROW);
+        m_xOwnAttributes.set(xCloneList->createClone(), UNO_QUERY_THROW);
     }
 
     OControlImport* OColumnWrapperImport::implCreateChildContext(
